--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
 
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnTwoCaramel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -50,7 +50,7 @@
                 app:srcCompat="@drawable/c2" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnTwoDalgona"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -62,7 +62,7 @@
                 app:srcCompat="@drawable/c3" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnTwoAmericano"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -74,7 +74,7 @@
                 app:srcCompat="@drawable/c4" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btnTwoColdbrew"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -86,7 +86,7 @@
                 app:srcCompat="@drawable/c5" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnTwoCafemoca"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -98,7 +98,7 @@
                 app:srcCompat="@drawable/c6" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btnTwoSignature"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
@@ -110,7 +110,7 @@
                 app:srcCompat="@drawable/c7" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btnTwoTonic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order" />
